--- a/Project/src/app/components/header/header.component.html
+++ b/Project/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="header-container">
+  <app-logo-gp></app-logo-gp>
+  <app-anunciecomp></app-anunciecomp>
+  <app-options></app-options>
+</div>
