--- a/Project/src/app/components/body/aside-filter/aside-filter.component.html
+++ b/Project/src/app/components/body/aside-filter/aside-filter.component.html
@@ -1,1 +1,43 @@
-<p>aside-filter works!</p>
+<div class="filter-container">
+  <form action="">
+    <div class="input-wrapper">
+      <label for="Opcao1">Opção 1</label> <input type="range" name="Opcao1" id="">
+    </div>
+    <div class="input-wrapper">
+      <label for="Opcao1">Opção 2</label> <input type="Number" name="Opcao2" id="">
+    </div>
+    <div class="input-wrapper">
+      <label for="Opcao1">Opção 3</label> <input type="range" name="Opcao3" id="">
+    </div>
+    <div class="checkbox-wrapper">
+      <div class="input-wrapper">
+        <label for="Opcao1">Check 1</label> <input type="checkbox" name="Opcao1" id="">
+      </div>
+      <div class="input-wrapper">
+        <label for="Opcao1">Check 2</label> <input type="checkbox" name="Opcao1" id="">
+      </div>
+      <div class="input-wrapper">
+        <label for="Opcao1">Check 3</label> <input type="checkbox" name="Opcao1" id="">
+      </div>
+      <div class="input-wrapper">
+        <label for="Opcao1">Check 4</label> <input type="checkbox" name="Opcao1" id="">
+      </div>
+      <div class="input-wrapper">
+        <label for="Opcao1">Check 5</label> <input type="checkbox" name="Opcao1" id="">
+      </div><div class="input-wrapper">
+        <label for="Opcao1">Check 6</label> <input type="checkbox" name="Opcao1" id="">
+      </div><div class="input-wrapper">
+        <label for="Opcao1">Check 7</label> <input type="checkbox" name="Opcao1" id="">
+      </div>
+      <div class="input-wrapper">
+        <label for="Opcao1">Check 8</label> <input type="checkbox" name="Opcao1" id="">
+      </div>
+    </div>
+    <div class="input-wrapper">
+      <label for="Opcao1">Opção 5</label> <input type="range" name="Opcao1" id="">
+    </div>
+    <div class="input-wrapper">
+      <label for="Opcao1">Opção 6</label> <input type="range" name="Opcao1" id="">
+    </div>
+  </form>
+</div>
