--- a/Project/src/app/components/body/body.component.html
+++ b/Project/src/app/components/body/body.component.html
@@ -1,5 +1,12 @@
 <div class="body-components-container">
-  <app-aside-filter></app-aside-filter>
-  <app-section></app-section>
+  <div class="filter-wrapper">
+    <app-aside-filter></app-aside-filter>
+  </div>
+  <div class="section-wrapper">
+    <app-section></app-section>
+  </div>
+<div class="aside-right-wrapper">
   <app-aside-right></app-aside-right>
 </div>
+</div>
+
