--- a/Project/src/styles.css
+++ b/Project/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+*{
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 1rem;
+  color: #fff;
+}
+
+html{
+  background-color: #000;
+}
+
+.menu-item{
+  border: 1px solid orange;
+  padding: 1rem 1.7rem;
+  font-size: 1.3rem;
+  text-decoration: none;
+  border-radius: 10px;
+box-shadow: 0 0 0 transparent;
+  transition: 0.3s ease-in-out;
+
+}
+.menu-item:hover{
+  color: #000;
+  border: transparent;
+  background-color: orange;
+  box-shadow: 0 0 5px orange,
+              0 0 10px orange,
+              0 0 20px orange;
+
+}
+
